# final-project-repository-aftrburned-out

./: .gitignore  BUILD 64 BIT MSVC 2017.bat  BUILD 64 BIT MSVC 2019.bat  aftr.conf  readme.md
mm/images/: TexturesCom_Wood_Wenge_1K_albedo.tif  TexturesCom_Wood_Wenge_1K_normal.tif  TexturesCom_Wood_Wenge_1K_roughness.tif
mm/models/: ball.mtl  divider.mtl  finally.mtl
src/: CMakeLists.txt  GLViewPachinko.cpp  GLViewPachinko.h  PachinkoWOP.cpp  PachinkoWOP.h  PachinkoWayPoints.cpp  PachinkoWayPoints.h  WOPManager.cpp  WOPManager.h  main.cpp  soundMngr.cpp  soundMngr.h
